# barebone-agents

./: .env.template  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
agents/_preferences/: .template.md  backend_rust_style.md  global_style.md  research_finance_style.md
agents/_roles/: analyst.md  architect.md  coder.md  docs-specialist.md  ops-engineer.md  qa-engineer.md  researcher.md  reviewer.md  writer.md
agents/_skills/: code_review.md  debugging.md  research_pipeline.md
agents/ino/: AGENT.md  agent.yml
config/: models.yml
config/skills/: agent_runbook.md  task_management.md
docs/: EP-00001_20260421_project-scaffolding-config-system.md  EP-00003_20260421_llm-client-layer.md  EP-00005_20260421_agent-loop-cli-channel.md  EP-00009_20260422_discord-status-multiagent.md  EP-00010_20260423_cli-management-subcommands.md  EP-00015_20260503_memory-aware-task-and-reflection-loop.md  SPECS.md  scratch_notes.md
docs/archived/: EP-00001_20260421_project-scaffolding-config-system.md  EP-00002_20260421_sqlite-database-layer.md  EP-00003_20260421_llm-client-layer.md  EP-00004_20260421_tool-registry-mcp-client.md  EP-00005_20260421_agent-loop-cli-channel.md  EP-00006_20260421_subagent-delegation.md  EP-00007_20260422_skills-system.md  EP-00008_20260422_scheduler-session-lifecycle.md  EP-00011_20260423_cli-extended-subcommands.md  EP-00012_20260501_akw-group-and-skill-tool-migration.md  EP-00013_20260502_local-equipped-skills.md  EP-00014_20260502_akw-pull-cache.md  (+1 more)
src/: agent_loop.rs  akw_pusher.rs  cli.rs  cmd_agents.rs  cmd_akw.rs  cmd_config.rs  cmd_conversations.rs  cmd_missions.rs  cmd_prefs.rs  cmd_pull.rs  cmd_tasks.rs  cmd_tokens.rs  draft_writer.rs  main.rs  memory_context.rs  preferences.rs  reflection.rs  scheduler.rs  session.rs  session_draft.rs  skills.rs  status.rs  triggers.rs
src/db/: mod.rs  (+5 more)
(+23 files in other folders)
