[package]
name = "barebone-agent"
version = "0.1.0"
edition = "2024"
description = "A local-first, LLM-agnostic AI agent harness"
license = "Apache-2.0"

[[bin]]
name = "barebone-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Env loading
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
