[package]
name = "barebone-agent"
version = "0.1.0"
edition = "2024"
description = "A local-first, LLM-agnostic AI agent harness"
license = "Apache-2.0"

[[bin]]
name = "barebone-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Env loading
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.35", features = ["bundled"] }

# Time
chrono = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async trait
async-trait = "0.1"

# Regex (for think-tag stripping)
regex = "1"

# HTML to text (for web_fetch)
html2text = "0.14"

# UUID (for tool call IDs)
uuid = { version = "1", features = ["v4"] }

# Discord bot
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"] }
poise = "0.6"

[dev-dependencies]
tempfile = "3"
